<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".CadastrarFuncionarioActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_funcionario"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginLeft="@dimen/margin"
        android:src="@drawable/detalhe_funcionario"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/margin"
        android:layout_marginLeft="150dp"
        android:text="@string/title_funcionario"
        android:textColor="@color/dark"
        app:layout_constraintBottom_toBottomOf="@id/iv_funcionario"
        app:layout_constraintLeft_toLeftOf="@id/iv_funcionario"
        app:layout_constraintTop_toTopOf="@id/iv_funcionario" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_nome_funcionarioo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:hint="@string/nome_do_funcionario"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/iv_funcionario" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_funcao_funcionario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:hint="@string/funcao_funcion_rio"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/et_nome_funcionarioo" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_id_funcionario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:hint="@string/id"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@id/et_funcao_funcionario" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_sistema_cadastro_funcionario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/margin"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginRight="@dimen/margin"
        android:text="@string/cadastrar"
        app:layout_constraintTop_toBottomOf="@id/et_id_funcionario" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_voltar_cadastro_funcionario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/margin"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginRight="@dimen/margin"
        android:text="@string/voltar"
        app:layout_constraintTop_toBottomOf="@id/btn_sistema_cadastro_funcionario" />


</androidx.constraintlayout.widget.ConstraintLayout>