<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ClienteActivity"
    android:background="@color/white">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_detalhe_servico"
        android:layout_width="150dp"
        android:layout_height="90dp"
        android:layout_marginHorizontal="@dimen/margin"
        android:layout_marginVertical="@dimen/margin_vertical"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="52dp"
        android:src="@drawable/cliente"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_title_servico"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/dark"
        android:textSize="15sp"
        android:text="@string/mensagem_cadastro_cliente"
        app:layout_constraintLeft_toRightOf="@id/iv_detalhe_servico"
        app:layout_constraintTop_toTopOf="@id/iv_detalhe_servico"
        app:layout_constraintBottom_toBottomOf="@id/iv_detalhe_servico"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_nome"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/iv_detalhe_servico"
        android:layout_marginVertical="@dimen/margin_vertical"
        android:hint="@string/hint_nome"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginRight="@dimen/margin"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_cpf"
        android:inputType="number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/et_nome"
        android:layout_marginVertical="@dimen/margin_vertical"
        android:hint="@string/cpf"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginRight="@dimen/margin"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_rg"
        android:inputType="number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/et_cpf"
        android:layout_marginVertical="@dimen/margin_vertical"
        android:hint="@string/rg"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginRight="@dimen/margin"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_codigo_cliente"
        android:layout_width="match_parent"
        android:inputType="number"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/et_rg"
        android:layout_marginVertical="@dimen/margin_vertical"
        android:hint="@string/codigo_cliente"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginRight="@dimen/margin"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_cadastrar_cliente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/et_codigo_cliente"
        android:layout_marginRight="@dimen/margin"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginVertical="@dimen/margin_vertical"
        android:text="@string/cadastrar"/>


</androidx.constraintlayout.widget.ConstraintLayout>