<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ServicoActivity"
    android:background="@color/white">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_detalhe_servico"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/detalhe_servico"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginVertical="60dp"
        android:layout_marginHorizontal="@dimen/margin" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_title_servico"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/iv_detalhe_servico"
        app:layout_constraintTop_toTopOf="@id/iv_detalhe_servico"
        app:layout_constraintBottom_toBottomOf="@id/iv_detalhe_servico"
        android:text="@string/text_servicos"
        android:textSize="30sp"
        android:layout_marginLeft="@dimen/margin"
        android:textColor="@color/dark"
        android:layout_marginStart="@dimen/margin" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_cadastrar_funcionario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/iv_detalhe_servico"
        android:layout_marginRight="@dimen/margin"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginVertical="100dp"
        android:text="@string/text_cadastro_funcionario" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_cadastrar_produto_servico"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/bt_cadastrar_funcionario"
        android:layout_marginRight="@dimen/margin"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginVertical="50dp"
        android:text="@string/text_cadastrar_produto" />


</androidx.constraintlayout.widget.ConstraintLayout>