<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EmpresaActivity"
    android:background="@color/white">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_detalhe_empresa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/detalhe_empresa"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginHorizontal="@dimen/margin"
        android:layout_marginVertical="@dimen/margin"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_detalhe_empresa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="32dp"
        android:text="@string/detalhe_empresa"
        android:textColor="@color/dark"
        android:textSize="@dimen/tamanho_fonte"
        app:layout_constraintLeft_toLeftOf="@id/iv_detalhe_empresa"
        app:layout_constraintTop_toTopOf="@id/iv_detalhe_empresa" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_mensagem_empresa"
        android:padding="@dimen/margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/historia"
        app:layout_constraintTop_toBottomOf="@id/iv_detalhe_empresa"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textSize="20sp"
        android:layout_marginVertical="@dimen/margin"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_voltar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_mensagem_empresa"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginVertical="50dp"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginRight="@dimen/margin"
        android:text="@string/voltar"/>

</androidx.constraintlayout.widget.ConstraintLayout>