<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ListaProdutoActivity"
    android:background="@color/white">
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_produtoo_cadastrado"
        android:layout_width="131dp"
        android:layout_height="96dp"
        android:src="@drawable/produto_logo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginVertical="@dimen/margin"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginStart="@dimen/margin" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_title_produto_cadastrado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/produto_cadastrado"
        app:layout_constraintTop_toTopOf="@id/iv_produtoo_cadastrado"
        app:layout_constraintBottom_toBottomOf="@id/iv_produtoo_cadastrado"
        android:layout_marginLeft="160dp"
        android:textSize="20sp"
        android:textColor="@color/dark"
        android:layout_marginStart="160dp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_nome_peoduto_cadastrada"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/iv_produtoo_cadastrado"
        android:layout_marginVertical="50dp"
        android:hint="@string/detalhes_aqui"
        android:textSize="@dimen/tamanho_fonte"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginRight="@dimen/margin"
        android:textColor="@color/dark"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_visualizar_nome_produto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/iv_produtoo_cadastrado"
        android:layout_marginVertical="50dp"
        android:textSize="@dimen/tamanho_fonte"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginRight="@dimen/margin"
        android:textColor="@color/dark"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_visualizar_valor_produto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_visualizar_nome_produto"
        android:layout_marginVertical="50dp"
        android:textSize="@dimen/tamanho_fonte"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginRight="@dimen/margin"
        android:textColor="@color/dark"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_visualizar_id_funcionario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_visualizar_valor_produto"
        android:layout_marginVertical="50dp"
        android:textSize="@dimen/tamanho_fonte"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginRight="@dimen/margin"
        android:textColor="@color/dark"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_voltar_main_produto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_visualizar_id_funcionario"
        android:layout_margin="50dp"
        android:text="@string/voltar"/>

</androidx.constraintlayout.widget.ConstraintLayout>